src/objects/ints__Decision_Logic_Parameters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Contains parameters which are required for Decision Logic web service call-outs.</description>
    <fields>
        <fullName>ints__Host_URL__c</fullName>
        <description>Host url for Decision Logic.</description>
        <label>Host URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ints__Profile_Guid__c</fullName>
        <description>Profile Guid to be used for Decision Logic web service call-outs.</description>
        <label>Profile Guid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Service_Key__c</fullName>
        <description>Service Key to be used for Decision Logic web service call-outs.</description>
        <label>Service Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ints__Site_User_Guid__c</fullName>
        <description>Site User Guid to be used for Decision Logic web service call-outs.</description>
        <label>Site User Guid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Decision Logic Parameters</label>
</CustomObject>